@@ -36,6 +36,7 @@
     * Start faster when already printing from SD
     * Don't store password in plaintext but use digest
     * Stop Wizard on printer errors.
+    * Support the new STOPPED state
 
 0.2.0 (2020-12-14)
 
